--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,10 +19,10 @@
         <div class="navbar-collapse collapse show" id="navbarSupportedContent">
             <ul class="navbar-nav sm-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('category', {'slug': 'tv'}) }}">Televisions </a>
+                    <a class="nav-link" href="#">Products </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('category', {'slug': 'media'}) }}">Media</a>
+                    <a class="nav-link" href="{{ path('categories') }}">Categories</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('about') }}">About us </a>
