--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
         <div class="navbar-collapse collapse show" id="navbarSupportedContent">
             <ul class="navbar-nav sm-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Products </a>
+                    <a class="nav-link" href="#">Products</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('categories') }}">Categories</a>
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="{{ path('about') }}">About us </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacts </a>
+                    <a class="nav-link" href="{{ path('feedback') }}">Contacts </a>
                 </li>
             </ul>
         </div>
