--- a/templates/products/item.html.twig
+++ b/templates/products/item.html.twig
@@ -6,5 +6,5 @@
  <h1> {{ product.name }}</h1>
     <p> {{ product.realPrice| localizedcurrency ('UAH')}}</p>
     <p> {{ product.description|nl2br }}</p>
-
+    <a href="{{ path('orders_add_to_cart', {'id' : product.id}) }}" class="btn btn-primary">Добавить в корзину </a>
 {% endblock %}
