--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,6 +6,8 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
               integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+              integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -27,12 +29,18 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('feedback') }}">Contacts </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('cart') }}">Cart </a>
+                </li>
             </ul>
         </div>
         <form class="form-inline my-2 my-sm-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
+        <a class="navbar-text ml-2" href="{{ path('cart') }}">
+            {{ render(url('orders_cart_in_header')) }}
+        </a>
     </nav>
 
     <div class="container">
