--- a/templates/products/item.html.twig
+++ b/templates/products/item.html.twig
@@ -3,8 +3,10 @@
 {% block title %}{{ product.name }}{% endblock %}
 
 {% block body %}
- <h1> {{ product.name }}</h1>
+ <h1 class="mt-3"> {{ product.name }}</h1>
+    <img src="{{ vich_uploader_asset(product, 'image') |imagine_filter('squared_thumbnail')}}" alt="{{ product.name }}">
     <p> {{ product.realPrice| localizedcurrency ('UAH')}}</p>
     <p> {{ product.description|nl2br }}</p>
     <a href="{{ path('orders_add_to_cart', {'id' : product.id}) }}" class="btn btn-primary mt-1 js-add-to-cart">Добавить в корзину </a>
+
 {% endblock %}
