--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -6,8 +6,13 @@
  <h1> Category</h1>
     <div class="row">
         {% for category in categories %}
+
             <div class="col-sm-3" style="margin-top: 30px">
+
                 <div class="card">
+                    {% if vich_uploader_asset(category,'image')  %}
+                        <img src="{{ vich_uploader_asset(category, 'image')|imagine_filter('squared_thumbnail') }}"  alt="{{ category.name }}">
+                    {% endif %}
                     <div class="card-body">
                         <h5 class="card-title"> {{ category.name }}</h5>
                         <a href="{{ path('category_item', {'id': category.id}) }}" class="btn btn-primary">Подробнее</a>
