--- a/templates/products/item.html.twig
+++ b/templates/products/item.html.twig
@@ -4,7 +4,9 @@
 
 {% block body %}
  <h1 class="mt-3"> {{ product.name }}</h1>
+    {% if vich_uploader_asset(product,'image')  %}
     <img src="{{ vich_uploader_asset(product, 'image') |imagine_filter('squared_thumbnail')}}" alt="{{ product.name }}">
+    {% endif %}
     <p> {{ product.realPrice| localizedcurrency ('UAH')}}</p>
     <p> {{ product.description|nl2br }}</p>
     <a href="{{ path('orders_add_to_cart', {'id' : product.id}) }}" class="btn btn-primary mt-1 js-add-to-cart">Добавить в корзину </a>
