--- a/public/css/app.css
+++ b/public/css/app.css
@@ -96,3 +96,7 @@
         -webkit-transform: rotate(360deg);
     }
 }
+
+.navbar-dark .navbar-nav .dropdown-menu.show>.nav-link {
+    color: black;
+}
