--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,20 +20,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="navbar-collapse collapse show" id="navbarSupportedContent">
-            <ul class="navbar-nav sm-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('categories') }}">Categories</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('about') }}">About us </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('feedback') }}">Contacts </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('cart') }}">Cart </a>
-                </li>
-            </ul>
+            {{ knp_menu_render('main') }}
         </div>
         <form class="form-inline my-2 my-sm-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
