--- a/templates/orders/cart.html.twig
+++ b/templates/orders/cart.html.twig
@@ -8,4 +8,5 @@
     <div id="cartItems">
     {{ include('orders/cartItems.html.twig', {'cart':cart}) }}
     </div>
+    <a class="btn btn-primary" href="{{ path('orders_create_order') }}">Оформить заказ</a>
 {% endblock %}
