--- a/templates/mail/newOrderForUser.html.twig
+++ b/templates/mail/newOrderForUser.html.twig
@@ -22,7 +22,8 @@
 
         </tr>
     {% endfor %}
-    <h4>Полная стоимсоть заказа : {{ order.amount | money }}</h4>
+    </table>
+    <h4> Полная стоимсоть заказа : {{ order.amount | money }}</h4>
     <h4> В скором времени с Вами свяжется Наш менеджер для уточнения <br> данных по этому заказу </h4>
     <h4> Спасибо! Ждем Вас снова </h4>
 {% endblock %}
