--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
-        <a id="cart-in-header" class="navbar-text ml-2" href="{{ path('cart') }}">
+        <a id="cart-in-header" class="navbar-text ml-2 " data-refresh-url="{{ path ('orders_cart_in_header') }}" href="{{ path('cart') }}">
             {{ render(url('orders_cart_in_header')) }}
         </a>
     </nav>
