--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -24,7 +24,7 @@
         </div>
         <form class="form-inline my-2 my-sm-0">
             <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
         </form>
         <a id="cart-in-header" class="navbar-text ml-2 " data-refresh-url="{{ path ('orders_cart_in_header') }}" href="{{ path('cart') }}">
             {{ render(url('orders_cart_in_header')) }}
