--- a/templates/products/item.html.twig
+++ b/templates/products/item.html.twig
@@ -11,8 +11,8 @@
     <p> {{ product.description|nl2br }}</p>
     <a href="{{ path('orders_add_to_cart', {'id' : product.id}) }}" class="btn btn-primary mt-1 js-add-to-cart">Добавить в корзину </a>
 
-    {% for attribute in product.attributes %}
-        <h3> {{ attribute }} : {{ attribute.attributeValues }} </h3>
+    {% for attribute in product.attributeValues %}
+        <h3> {{ attribute }} : {{ attribute.value }} </h3>
     {% endfor %}
 
 
