--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,10 +22,12 @@
         <div class="navbar-collapse collapse show" id="navbarSupportedContent">
             {{ knp_menu_render('main') }}
         </div>
-        <form class="form-inline my-2 my-sm-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Поиск</button>
+        <form class="form-inline my-2 my-sm-0 search-form" action="{{ path('search') }}" method="get" id="header-search-form">
+            <input class="form-control mr-sm-2" name="q" type="search" placeholder="Поиск" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Найти</button>
+            <div id="header-search-results" class="list-group "></div>
         </form>
+
         <a id="cart-in-header" class="navbar-text ml-2 " data-refresh-url="{{ path ('orders_cart_in_header') }}" href="{{ path('cart') }}">
             {{ render(url('orders_cart_in_header')) }}
         </a>
