--- a/templates/categories/item.html.twig
+++ b/templates/categories/item.html.twig
@@ -8,9 +8,34 @@
 
 <div class="row">
 
+    <div class="col-2">
+     {{ form_start(filterForm) }}
 
- {{ include('products/_productsList.html.twig', {'products': category.products}) }}
+     {% for attribute in category.attributes%}
+     <div class="row ">
+      <p> {{ attribute.name }}</p>
+         <div class="form-row">
+                   <div class="form-group col-6">
+                    {{ form_label (filterForm['attr_min_' ~ attribute.id], 'от') }}
+                    {{ form_widget (filterForm['attr_min_' ~ attribute.id]) }}
+                   </div>
+                  <div class="form-group col-6">
+                      {{ form_label (filterForm['attr_max_' ~ attribute.id], 'до') }}
+                      {{ form_widget (filterForm['attr_max_' ~ attribute.id]) }}
+                  </div>
+         </div>
+     </div>
+        {% endfor %}
+        <button type="submit"> Применить</button>
+     {{ form_end(filterForm) }}
+    </div>
+
+    <div class="col-10">{{ include('products/_productsList.html.twig', {'products': category.products}) }}
+
+    </div>
+
 </div>
+
 <br>
 
 {% endblock %}
